added input fields

--- a/popup.html
+++ b/popup.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div id="container">
-        <label for="inputValue">Enter a value:</label>
+        <label for="inputValue">Account name:</label>
+        <label for="inputValue">Case Id:</label>
         <input type="text" id="inputValue" />
-        <button id="exportButton">Export to CSV</button>
+        <button id="exportButton">Export to Excel</button>
   </body>
 </html>
