changes in csv export

--- a/popup.html
+++ b/popup.html
@@ -10,8 +10,9 @@
   <body>
     <div id="container">
         <label for="inputValue">Account name:</label>
-        <label for="inputValue">Case Id:</label>
         <input type="text" id="inputValue" />
+        <label for="inputValue">Case Id:</label>
+        <input type="text" id="inputValue2" />
         <button id="exportButton">Export to Excel</button>
   </body>
 </html>
